Split repo into 'client' and 'server' subprojects.